# OptiSMOKE_toolbox

./: .clang-format  .cmake.neovim.json  .gitignore  CMakeLists.txt  README.md
EXAMPLES/1D_FLAME/BurnerStabilizedFlame/: OS_input.in  Path_to_Exp_Datasets.txt  Path_to_Input_Datasets.txt  clean.sh
EXAMPLES/1D_FLAME/LaminarBurningSpeed/: OS_input.in  Path_to_Exp_Datasets.txt  Path_to_Input_Datasets.txt  clean.sh
EXAMPLES/PFR/PFR_Test_Shift/: OS_input.in  Path_to_Exp_Datasets.txt  Path_to_Input_Datasets.txt
EXAMPLES/PFR/PFR_X_FUEL/: OS_input.in  Path_to_Exp_Datasets.txt  Path_to_Input_Datasets.txt
EXAMPLES/PFR/TC_nancy_PFR_mSP_out/: OS_input.in  Path_to_Exp_Datasets.txt  Path_to_Input_Datasets.txt
EXAMPLES/PFR/TC_stagni_PFR_ss/: OS_input.in  Path_to_Exp_Datasets.txt  Path_to_Input_Datasets.txt
EXAMPLES/PSR/TC_rota_NH3_single_species/: OS_input.in  Path_to_Exp_Datasets.txt  Path_to_Input_Datasets.txt
EXAMPLES/PSR/TC_sabia_H2_multipleQoI_CO2/: OS_input.in  Path_to_Exp_Datasets.txt  Path_to_Input_Datasets.txt
EXAMPLES/PSR/TC_sabia_H2_multipleQoI_H2O/: OS_input.in  Path_to_Exp_Datasets.txt
EXAMPLES/direct_measurements/KT/: .output_new.out.swp  OS_input.in  Path_Exp_Data_files.txt  Path_to_OS_input_file.txt
EXAMPLES/direct_measurements/KTP/: OS_input.in  clean.sh
EXAMPLES/direct_measurements/KTP_direct/: OS_input.in  Path_Exp_Data_files.txt
EXAMPLES/direct_measurements/KTP_diverse/: OS_input.in
EXAMPLES/direct_measurements/KTP_diverse_1/: OS_input.in  Path_OS_input_files.txt
EXAMPLES/mechanisms/Aramco_2.0/: Kinetics_Summary.out  input.dic  kinetics.xml
EXAMPLES/mechanisms/Aramco_MB/: Kinetics.CKI  Kinetics_Summary.out  Thermodynamics_Coefficients.out  kinetics.CHEMKIN.CKI  kinetics.xml  reaction_names.xml
EXAMPLES/mechanisms/ELTE/: Kinetics.CKI  Kinetics_Summary.out  Thermodynamics.CKT  Thermodynamics_Coefficients.out  Thermodynamics_Tables.out  Transport.TRC  input.dic  kinetics.CHEMKIN.CKI  kinetics.xml  reaction_names.xml
EXAMPLES/mechanisms/GLOBAL/: Kinetics_Summary.out  Thermodynamics_Coefficients.out  Thermodynamics_Tables.out  four_steps.inp  idealgas.oldstyle.ascii  input.dic  kinetics.CHEMKIN.CKI  kinetics.xml  reaction_names.xml  reactions.oldstyle.ascii
EXAMPLES/mechanisms/H2_effort/: Kinetics.CKI  Kinetics_Summary.out  Thermodynamics.CKT  Thermodynamics_Tables.out  input.dic  kinetics.CHEMKIN.CKI  kinetics.xml
EXAMPLES/mechanisms/NUIG/: Kinetics_Summary.out  Thermodynamics_Coefficients.out  Thermodynamics_Tables.out  h2_co_nuig_chem.inp  input.dic  kinetics.CHEMKIN.CKI  kinetics.xml  reaction_names.xml
EXAMPLES/mechanisms/POLIMI_C1C3/: Kinetics.CKI  Kinetics_Summary.out  Thermodynamics.therm  Thermodynamics_Coefficients.out  Transport.TRAN  input.dic  kinetics.CHEMKIN.CKI  kinetics.xml
EXAMPLES/mechanisms/POLIMI_C1C3_OPT/: Kinetics_Summary.out  Thermodynamics_Tables.out  input.dic  kinetics.CHEMKIN.CKI  kinetics.xml  kinetics_OptiSMOKEpp.CKI  reaction_names.xml
EXAMPLES/mechanisms/Polimi_NH3_2020/: Kinetics.CKI  Kinetics_Summary.out  Sensitivities.xml  input.dic  (+5 more)
cmake/: FindBzzMATH.cmake  FindCEQ.cmake  FindCONFIG.cmake  FindConfig.cmake  FindOpenBLAS.cmake  FindOpenSMOKEpp.cmake  FindOpenSMOKEppSOLVERS.cmake  FindSUNDIALS.cmake  FindSuiteSparse.cmake  FindSuperLU.cmake
code/: Dakota_Plugin.h  DirectApplicInterface.hpp  Makefile  OptiSMOKEpp.cpp
code/Batch/: BatchReactor_Plugin.h
code/CURVE_MATCHING/: GlobalVariables.h  Spline.h
code/Flame1D/: Flame1D_Plugin.h  Flame1D_Plugin.hpp
code/Grammar_files/: Grammar_BatchReactor.h  Grammar_CurveMatchingOptions.h  Grammar_DakotaOptions.h  Grammar_OptiSMOKEpp.h  Grammar_PerfectlyStirredReactor.h  Grammar_PremixedLaminarFlame1D.h
code/PSR/: PerfectlyStirredReactor_Plugin.h  PerfectlyStirredReactor_Plugin.hpp
code/Read_Input/: .Read_Input.hpp.swn  .Read_Input.hpp.swo  .Read_Input.hpp.swp  Read_Input.h
projects/: clean.sh
projects/Linux/: Makefile.am  configure.ac  configure.home-desktop  input.dic  preconfigure
projects/Linux_Bertolino/: Makefile  bash_variable.txt
projects/Linux_BovisaCluster/: Makefile.am  bash_variable.txt  configure.ac  configure.home-desktop
projects/OS-X/: Makefile.am  configure.ac  preconfigure
scripts/: compile-autoconf  compile-cmake  compile-cmake-cluster-Z3  compile-cmake-macos-minimal
source/: DataManager.h  DataManager.hpp  InputManager.h  InputManager.hpp  OS_input.in  OptiSMOKEpp.cpp  OptiSMOKEpp.h  OptimizedKinetics.h  OptimizedKinetics.hpp  SerialDakotaInterface.h  SerialDakotaInterface.hpp  SimulationsInterface.h  SimulationsInterface.hpp
source/1d_flames/: 1d_flames.h
source/curve_matching/: BasisFunction.h  CurveMatchingPython.h  GlobalVariables.h  Indexes.h  Results.h  Spline.h  Utilities.h  curve_matching.h
source/grammar/: grammar.h  grammar_OptiSMOKEpp.h  grammar_batchreactor.h  grammar_curvematching.h  grammar_dakota.h  grammar_nlopt.h  grammar_optimization_setup.h  grammar_optimization_targets.h  grammar_optismoke.h  grammar_perfectlystirredreactor.h  grammar_plugflowreactor.h  grammar_premixedlaminarflame.h
source/ideal_reactors/: ideal_reactors.h
source/options/: options.h  options_curvematching.h  options_curvematching.hpp  options_dakota.h  options_dakota.hpp  options_kinetics.h  options_kinetics.hpp  options_nlopt.h  options_nlopt.hpp  options_optimization_setup.h  options_optimization_setup.hpp  options_optimization_target.h  options_optimization_target.hpp
source/utilities/: OptiSMOKEFunctions.h  OptiSMOKEFunctions.hpp  OptiSMOKEUtilities
src/: Dakota_Plugin.hpp
src/.deps/: OptiSMOKEpp.Po
src/Batch/: BatchReactor_Plugin.hpp
src/CURVE_MATCHING/: BasisFunction.h  Indexes.h
src/Flame1D/: Flame1D_Plugin.hpp  OpenSMOKE_PremixedLaminarFlame1D.h  OpenSMOKE_PremixedLaminarFlame1D.hpp
src/Grammar_files/: Grammar_DakotaOptions.h  Grammar_OptiSMOKEpp.h  Grammar_PlugFlowReactor.h
src/PFR/: PlugFlowReactor_Plugin.h  PlugFlowReactor_Plugin.hpp
src/Read_Input/: Read_Input.h  Read_Input.hpp
test/test-2/: dakota.rst  diff.txt  diff2.txt  input.dic
test/test-batch/: dakota.rst
test/test-pfr/: input.dic
(+1257 files in other folders)
